<resources>
    <string name="app_name" translatable="false">Banksola</string>
    <string name="admob_interstitial" translatable="false">ca-app-pub-3293843557873754/7206543114</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="enter_your_username">Enter your username or email address</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="str_remember_me">Remember me</string>
    <string name="forget_user_password">Forgot username or password?</string>
    <string name="str_sign_in">Sign in</string>
    <string name="str_open_account">Open an Account</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="str_it_s_free_and_only_takes_a_minute">It’s free and only takes a minute.</string>
    <string name="str_username">Username</string>
    <string name="str_email_address">Email Address</string>
    <string name="str_password">Password</string>
    <string name="str_confirm_password">Confirm Password</string>
    <string name="str_already_have_an_account">Already have a account? <font color='#105CA8'>Sign in.</font></string>
    <string name="str_signup_description">By clicking the Sign Up button, you agree to our\nTerms &amp; Conditions,and Privacy Policy</string>
    <string name="str_find_your_account">Find your Account</string>
    <string name="str_enter_your_email_address_to_reset_your_password_we_ll_send_you_a_verification_code_to_your_email_address">Enter your Email Address to reset your password.We\'ll send you a verification code to your email address</string>
    <string name="next">Next</string>
    <string name="str_email">Email</string>
    <string name="str_enter_otp">Enter OTP</string>
    <string name="str_we_ve_sent_you_one_time_verification_code_to_verify_your_account">We\'ve sent you one time Verification code to verify your account</string>
    <string name="str_submit">Submit</string>
    <string name="str_re_send_code"><u>Re-send code</u></string>
    <string name="str_welcome_to_banking">Welcome to Bannking</string>
    <string name="str_you_re_on_your_way_to_taking_control_of_your_finances">You’re on your way to taking control of your finances.</string>
    <string name="str_get_started">Get Started</string>
    <string name="todo">TODO</string>
    <string name="str_good_morning_john">Good morning John</string>
    <string name="str_time">May 12, 2022</string>
    <string name="str_accounts">Accounts</string>
    <string name="str_header">Header</string>
    <string name="str_spending_plan">Spending Plan</string>
    <string name="str_explore">Explore</string>
    <string name="str_menu">Menu</string>
    <string name="str_business_and_personal_accounts">Business and Personal Accounts</string>
    <string name="str_track_account_manually">Track Account Manually</string>
    <string name="str_manually_manage_various_types_of_accounts_enter_transactions_by_hand_or_auto_by_app">Manually manage various types of accounts. Enter transactions by hand or auto-by-app</string>
    <string name="str_create_new_account">Create New Account</string>
    <string name="str_profile">Profile</string>
    <string name="str_gmail">ibeorstore@gmail.com</string>
    <string name="str_name">Mike</string>
    <string name="str_languages">Choose Your Language</string>
    <string name="str_remove_all_ads">Remove all Ads</string>
    <string name="str_select_your_currency">Change Currency</string>
    <string name="str_change_password">Change password</string>
    <string name="str_privacy_policy">Privacy Policy</string>
    <string name="str_notifications">Notifications</string>
    <string name="str_restore_purchase">Restore Purchase</string>
    <string name="str_rate_app">Rate App</string>
    <string name="str_upgrade">Upgrade</string>
    <string name="str_sound">Voice reader</string>
    <string name="str_logout">Logout</string>
    <string name="str_delete_my_account">Delete My Account</string>
    <string name="str_version">Version </string>
    <string name="str_welcome_to_the_best_personal_financial_tracker">Welcome to the Best Personal \nFinancial Tracker</string>
    <string name="str_stay_focused_on_your_financial_goals">Stay focused on your financial goals</string>
    <string name="str_a_better_way_to_add_expenses_income_debts_and_transfers">A better way to add expenses, income, debts and transfers</string>
    <string name="str_control_your_finances_in_pleasure">Control your finances in pleasure</string>
    <string name="str_track_your_daily_expenses_track_your_spending">Track your daily expenses &amp; Track your spending</string>
    <string name="str_the_best_way_to_stick_to_your_budget">The best way to stick to your budget</string>
    <string name="str_take_control_of_your_business_checking_accounts_budget">Take control of your Business &amp; Checking Accounts Budget</string>
    <string name="str_say_hello_to_the_app_that_takes_the_work_out_of_personal_finances">Say hello to the app that takes the work out of personal Finances</string>
    <string name="str_ok">OK</string>
    <string name="str_done">Done</string>
    <string name="str_account_menu_title">Account Menu Title</string>
    <string name="str_select_up_to_two">Select Up to Two</string>
    <string name="str_banking_is_here_to_help_you_live_your_best_financial_life">Banking is here to help you live your best financial life.</string>
    <string name="str_continue">Continue</string>
    <string name="str_go_premium">Go Premium</string>
    <string name="str_by_tapping_continue_you_agree_to_our_terms_and_your_apple_id_will_be_charged_your_subscription_will_automatically_renew_at_the_same_price_and_package_length_until_you_cancel_in_your_app_store_account">By tapping ‘’continue’, you agree to our Terms and your Apple ID will be charged. your subscription will automatically renew at the same price and package length until you cancel in your App Store account.</string>
    <string name="str_available_balance">Available Balance</string>
    <string name="str_pay">Pay</string>
    <string name="str_recent_transactions">Recent transactions</string>
    <string name="str_date">Date</string>
    <string name="str_amount">Amount</string>
    <string name="str_transaction_desription">RECURRING TRANSFER TO CHRISTAPP LLC BUSINESS MARKET RATE SAVINGS REF #OP0FBMF7GH XXXXXX0578</string>
    <string name="str_transfer">Transfer</string>
    <string name="str_create">Create</string>
    <string name="str_transaction_name">Transaction Name</string>
    <string name="str_payment">Payment</string>
    <string name="str_dollar">$</string>
    <string name="_0_00">0.00</string>
    <string name="str_transfer_from">Transfer from</string>
    <string name="str_transfer_to">Transfer to</string>
    <string name="str_transfer_on">Transfer on</string>
    <string name="str_today">Today</string>
    <string name="str_schedule_a_transfer">Schedule a Transfer</string>
    <string name="str_english">English</string>
    <string name="str_transaction_title">Transaction Title</string>
    <string name="str_create_transaction_details">Create Transaction Details</string>
    <string name="str_you_completed_a_transfer_of">You completed a transfer of</string>
    <string name="str_1_00">$1.00</string>
    <string name="str_transaction_number">Transaction Number</string>
    <string name="str_status">Status</string>
    <string name="str_make_another_transfer">Make another transfer</string>
    <string name="str_explore_your_expenses">Explore your Expenses</string>
    <string name="str_rent_or_mortgage">Rent or mortgage</string>
    <string name="str_create_budget_planner">Create Budget Planner</string>
    <string name="str_account_type">Account Type</string>
    <string name="str_business_or_personal">Business or Personal</string>
    <string name="str_account_code_men">Account Code *</string>
    <string name="str_8099">…8099</string>
    <string name="str_maintenance">Bannking App is currently down for Maintenance</string>
    <string name="str_maintenance2">We expect to be back in a couple of hours. Thanks for your patience.</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="str_create_own_title">CREATE OWN TITLE</string>
    <string name="enter_title">Enter menu title</string>
    <string name="str_transaction_type">Transaction Type</string>
    <string name="str_date_format">DD MM, YYYY</string>
    <string name="str_select_type">Select type</string>
    <string name="str_edit">Edit</string>
    <string name="str_edit_profile">Edit profile</string>
    <string name="str_profile_picture">Profile picture</string>
    <string name="str_add_picture">Add Picture</string>
    <string name="str_from_gallery">From Gallery</string>
    <string name="str_open_camera">Open Camera</string>
    <string name="str_notification">Notification</string>
    <string name="str_title_maintenance">Maintenance</string>
    <string name="delete_this_account">Delete this account</string>
    <string name="str_schedule_transfer">Schedule transfer</string>
    <string name="str_account_name">Account name</string>
    <string name="str_account_header_switch">Your account headers switched successfully.</string>
    <string name="str_account_create_successfully">Your account successfully created.</string>
    <string name="str_success">Success</string>
    <string name="str_filter_header_title">Filter your header title</string>
    <string name="str_alert">Alert !</string>
    <string name="str_non_premium_message">Upgrade now to  unlock unlimited access to hidden features and enjoy premium benefits</string>
    <string name="str_skip">Skip</string>
    <string name="str_server_error">Oops, Something went wrong, please try again later</string>
    <string name="str_test">testing</string>
    <string name="str_enter_amount">Enter Amount</string>
    <string name="str_enter_transaction_title">Enter Transaction Title</string>
    <string name="str_create_own_budget_planner">Create Own Budget Planner</string>
    <string name="str_enter_budget_planner_name">Enter Budget Planner Name</string>
    <string name="str_choose_color">Click to choose color</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_good_morning">Good morning</string>
    <string name="str_good_afternoon">Good afternoon</string>
    <string name="str_good_evening">Good evening</string>
    <string name="str_good_night">Good night</string>
    <string name="str_hello">Hello</string>
    <string name="str_please_wait">Please wait</string>
    <string name="str_loading">Loading........</string>
    <string name="str_please_unselect_the_previous_selected_value_then_try">Please unselect the previous selected value, then try</string>
    <string name="str_failed_to_create_menu_title_request">Failed to create menu title Request</string>
    <string name="str_failed_to_save_menu_title_request">Failed to save menu title Request</string>
    <string name="str_please_select_any_one_menu">Please select any one menu</string>
    <string name="str_please_enter_your_title">Please enter your title</string>
    <string name="str_color_picker_dialog">ColorPicker Dialog</string>
    <string name="str_bannking_color_picker">Bannking budget color picker</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_your_budget_title_created_successfully">Your Budget Title Created Successfully</string>
    <string name="str_your_budget_title_created_unsuccessfully">Your Budget Title Created Unsuccessfully</string>
    <string name="str_please_choose_any_color">Please Choose Any Color</string>
    <string name="delete_account_title">Delete Account Title</string>
    <string name="delete_only_accounnt">Delete Only Account</string>
    <string name="delete_both">Delete Both</string>
</resources>